Add default adaptris repos

--- a/config/config.json.sample
+++ b/config/config.json.sample
@@ -4,7 +4,43 @@
   "password": "",
   "groupByRepo": false,
   "repos": [
-
+    "adaptris/interlok",
+    "adaptris/interlok-hpcc",
+    "adaptris/interlok-jruby",
+    "adaptris/interlok-socket",
+    "adaptris/interlok-jq",
+    "adaptris/interlok-profiler",
+    "adaptris/interlok-sshtunnel",
+    "adaptris/interlok-mongodb",
+    "adaptris/interlok-jclouds",
+    "adaptris/interlok-service-tester",
+    "adaptris/interlok-stax",
+    "adaptris/interlok-aws",
+    "adaptris/interlok-filesystem",
+    "adaptris/interlok-mqtt",
+    "adaptris/interlok-config-conditional",
+    "adaptris/interlok-expressions",
+    "adaptris/interlok-es5",
+    "adaptris/interlok-oauth",
+    "adaptris/interlok-activemq",
+    "adaptris/interlok-gcloud-pubsub",
+    "adaptris/interlok-container",
+    "adaptris/interlok-json",
+    "adaptris/interlok-cache",
+    "adaptris/interlok-shell",
+    "adaptris/interlok-csv",
+    "adaptris/interlok-csv-json",
+    "adaptris/interlok-apache-http",
+    "adaptris/interlok-xinclude",
+    "adaptris/interlok-variable-substitution",
+    "adaptris/interlok-es-rest",
+    "adaptris/interlok-amqp",
+    "adaptris/interlok-vertx",
+    "adaptris/interlok-stackify",
+    "adaptris/interlok-api",
+    "adaptris/interlok-cassandra",
+    "adaptris/interlok-vcs-git",
+    "adaptris/interlok-elasticsearch"
   ],
   "comments": {
     "positive": [
